--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -4,6 +4,6 @@
 <ul>
     @foreach (var item in @Model)
    {
-       <li>@item.Description<a asp-action="delete" asp-all-route-id="@item.Id">delete</a></li>
+       <li>@item.Descriptionn<a asp-action="delete" asp-all-route-id="@item.Id">delete</a></li>
    }
 </ul>
